fx2j-parser/src/test/resources/element/valid/static.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <GridPane.alignment>
        TOP_RIGHT
    </GridPane.alignment>
</VBox>