fx2j-parser/src/test/resources/element/invalid/property-non-assignable-child.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <children>
        <GridPane.alignment/>
    </children>
</VBox>